tests/ui/cast/ptr-to-trait-obj-different-args.stderr
error[E0606]: casting `*const dyn A` as `*const dyn B` is invalid
  --> $DIR/ptr-to-trait-obj-different-args.rs:19:27
   |
LL |     let b: *const dyn B = a as _;
   |                           ^^^^^^
   |
   = note: vtable kinds may not match

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0606`.
